--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
 .App {
   text-align: center;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background: linear-gradient(45deg,pink,violet);
+    width: 100vw;
+    height: 100vh;
+    margin: 0px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+#container {
+    min-width: 30%;
+    min-height: 30%;
+    backdrop-filter: blur(5px);
+    background: rgba(0, 0, 0, 0);
+    box-shadow: 5px 5px 5px 2px black;
+    border-radius: 20px;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    padding: 5px 10px;
+    font-family: "Poppins",sans-serif;
+}
+
+.heartMoveOne {
+    font-size: 25px;
+    position: absolute;
+    animation:  heartMoveOne linear 1;
+    top: -10vh;
+    z-index: 0;
+}
+
+.heartMoveTwo {
+  font-size: 25px;
+  position: absolute;
+  animation:  heartMoveTwo linear 1;
+  left: -10vw;
+  z-index: 0;
+}
+
+.heartMoveThree {
+  font-size: 25px;
+  position: absolute;
+  animation:  heartMoveThree linear 1;
+
+  top:-10vh;
+  left:-10vh;
+
+  z-index: 0;
+}
+
+
+@keyframes  heartMoveOne {
+    0%{
+        transform: translateY(-10vh) ;
+    }
+    100%{
+        transform: translateY(110vh) ;
+    }
+}
+
+@keyframes  heartMoveTwo {
+  0%{
+      transform: translateX(-10vw) ;
+  }
+  100%{
+      transform: translateX(110vw) ;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Three */
+
+@keyframes  heartMoveThree {
+  0%{
+      transform: translate(-10vw, -10h);
+
   }
-  to {
-    transform: rotate(360deg);
+  100%{
+      transform: translate(110vw,110vh) ;
+
   }
 }
